Add scaffold for the endpoint for listing safebox items
The standard Authorization header with the Bearer HTTP authentication
scheme will be used for granting access to users to the safeboxes.

The acceptance tests are currently in red.

References:

* https://swagger.io/docs/specification/authentication/bearer-authentication/
* https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication
* https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Authorization
* https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/401
* https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/WWW-Authenticate
* https://datatracker.ietf.org/doc/html/rfc6750
* https://swagger.io/docs/specification/links/
* https://edgeapi.rubyonrails.org/classes/ActiveRecord/TokenFor/ClassMethods.html
