# apps/safe_ish/safeboxes/api/v1/list_safebox_items_controller.rb
@@ -1,0 +1,15 @@
+# frozen_string_literal: true
+
+module SafeIsh
+  module Safeboxes
+    module Api
+      module V1
+        class ListSafeboxItemsController < ApplicationController
+          def index
+            # TODO
+          end
+        end
+      end
+    end
+  end
+end
