# config/routes.rb
@@ -17,6 +17,7 @@ Rails.application.routes.draw do
     scope :v1 do
       post "safeboxes", to: "safe_ish/safeboxes/api/v1/create_safebox#create"
       post "safeboxes/:id/open", to: "safe_ish/safeboxes/api/v1/open_safebox#create"
+      get "safeboxes/:id/items", to: "safe_ish/safeboxes/api/v1/list_safebox_items#index"
     end
   end
 end
